[backend] Fix office images being incorrectly updated
