# docs/swagger/internal-admin.yaml
@@ -1576,6 +1576,8 @@ paths:
                       maxLength: 64
                 images:
                   type: array
+                  minItems: 1
+                  maxItems: 10
                   items:
                     type: string
                     format: binary
@@ -1694,7 +1696,6 @@ paths:
               type: object
               required:
                 - office
-                - addedImages
               properties:
                 office:
                   type: object
@@ -1737,6 +1738,8 @@ paths:
                     images:
                       type: array
                       description: Ordered list of images to be used, images not in this list will be removed, current refers to the active images and added refers to images included in this request
+                      minItems: 1
+                      maxItems: 10
                       items:
                         type: string
                       examples:
@@ -1745,6 +1748,7 @@ paths:
                           - "current[2]"
                 addedImages:
                   type: array
+                  maxItems: 10
                   items:
                     type: string
                     format: binary
